# tomlmini

./: .gitignore  README.md  pyproject.toml
src/tomlmini/: __init__.py  _core.py  _errors.py
tests/: test_arrays.py  test_basic.py  test_datetime.py  test_errors.py  test_numbers.py  test_round_trip.py  test_strings.py  test_tables.py
